--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
 
+    <form method="post">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" value="" placeholder="Your name" />
+        <button name="submit" id="submit">Submit</button>
+    </form>
+
     
 </body>
 </html>
