--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles/style.css" rel="stylesheet"/>
+
 </head>
+
 <body>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
@@ -20,6 +24,7 @@
         <button name="submit" id="submit">Submit</button>
     </form>
 
-    
+
 </body>
+
 </html>
